deploy/api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: franchisecloud
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ${IMAGE_API}
        command:
        - yarn
        - serve
        ports:
        - containerPort: 80
