deploy/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: franchisecloud
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: api
