deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: franchisecloud
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.franchisecloud.io' ) {
        rewrite ^ https://franchisecloud.io$request_uri permanent;
      }
spec:
  tls:
  - hosts:
    - franchisecloud.io
    - www.franchisecloud.io
    secretName: ingress-app
  rules:
  - host: franchisecloud.io
    http:
      paths:
      - path: /api/v1
        backend:
          serviceName: api
          servicePort: 80
      - path: /stripe
        backend:
          serviceName: api
          servicePort: 80
      - path: /janitor
        backend:
          serviceName: api
          servicePort: 80
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
  - host: www.franchisecloud.io
    http:
      paths:
      - path: /api/v1
        backend:
          serviceName: api
          servicePort: 80
      - path: /stripe
        backend:
          serviceName: api
          servicePort: 80
      - path: /janitor
        backend:
          serviceName: api
          servicePort: 80
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
